--- a/setup/_forms.scss
+++ b/setup/_forms.scss
@@ -45,22 +45,22 @@ select[multiple=multiple] {
   background-color: $base-background-color;
   border: $base-border;
   border-radius: $base-border-radius;
-  box-shadow: inset 0 1px 3px rgba($black, 0.06);
+  box-shadow: inset 0 1px 3px rgba(#000, 0.06);
   box-sizing: border-box;
   font-family: $base-font-family;
   font-size: $base-font-size;
   margin-bottom: $half-spacing-unit;
   padding: $base-spacing-unit / 3;
-  transition: border-color $base-duration $base-timing;
+  transition: border-color 150ms ease;
   width: 100%;
 
   &:hover {
-    border-color: shade($base-border-color, 20%);
+    border-color: darken($base-border-color, 20%);
   }
 
   &:focus {
     border-color: $action-color;
-    box-shadow: inset 0 1px 3px rgba($black, 0.06), 0 0 5px adjust-color($action-color, $lightness: -5%, $alpha: -0.3);
+    box-shadow: inset 0 1px 3px rgba(#000, 0.06), 0 0 5px lighten($action-color, 20%);
     outline: none;
   }
 
