--- a/abstractions/_island.scss
+++ b/abstractions/_island.scss
@@ -1,36 +1,37 @@
-/*------------------------------------*\
-    $ISLAND
-\*------------------------------------*/
-/**
- * Simple, boxed off content, as per: csswizardry.com/2011/10/the-island-object
- * E.g.:
- *
-   <div class=island>
-       I am boxed off.
-   </div>
- *
- * Demo: jsfiddle.net/inuitcss/u8pV3
- *
- */
+///
+/// @name Island
+/// @group abstractions
+/// @description
+///     A basic abstraction for a padded block-level element
+///     http://csswizardry.com/2011/10/the-island-object/
+///
+/// @example
+///     <div class="island [islet]">
+///         <p></p>
+///     </div>
+///
+
 .island,
-.islet{
+.islet {
     @extend .cf;
-    display:block;
+    display: block;
 }
+
 .island{
-    margin-bottom:$base-spacing-unit;
-    padding:$base-spacing-unit;
+    margin-bottom: $base-spacing-unit;
+    padding: $base-spacing-unit;
 }
+
     .island > :last-child,
-    .islet > :last-child{
-        margin-bottom:0;
+    .islet > :last-child {
+        margin-bottom: 0;
     }
 
+///
+/// Just like `.island`, only smaller.
+///
 
-/**
- * Just like `.island`, only smaller.
- */
-.islet{
-    margin-bottom:$half-spacing-unit;
-    padding:$half-spacing-unit;
+.islet {
+    margin-bottom: $half-spacing-unit;
+    padding: $half-spacing-unit;
 }
