--- a/abstractions/_split.scss
+++ b/abstractions/_split.scss
@@ -14,7 +14,7 @@
 ///         <dd>$2.99</dd>
 ///     </dl>
 ///
-///     <ol class=split>
+///     <ol class="split">
 ///         <li><b class="split__title">1st place</b> Bob</li>
 ///         <li><b class="split__title">2nd place</b> Lilly</li>
 ///         <li><b class="split__title">3rd place</b> Ted</li>
