--- a/grid/_widths.scss
+++ b/grid/_widths.scss
@@ -1,55 +1,55 @@
-/*------------------------------------*\
-    $WIDTHS
-\*------------------------------------*/
-/**
- * Sizes in human readable format. These are used in conjunction with other
- * objects and abstractions found in inuit.css, most commonly the grid system
- * and faux flexbox.
- *
- * We have a mixin to generate our widths and their breakpoint-specific
- * variations.
- */
+///
+/// @name Widths
+/// @group grid
+/// @description
+///     Sizes in human readable format. These are used in conjunction with other
+///     objects and abstractions found in inuit.css, most commonly the grid system
+///     and faux flexbox.
+///
+///     We have a mixin to generate our widths and their breakpoint-specific
+///     variations.
+///
 
 @mixin device-type($namespace: "") {
-    /**
-    * Whole
-    */
+    ///
+    /// Whole
+    ///
     .#{$namespace}one-whole         { width:100%; }
 
 
-    /**
-    * Halves
-    */
+    ///
+    /// Halves
+    ///
     .#{$namespace}one-half          { width:50%; }
 
 
-    /**
-    * Thirds
-    */
+    ///
+    /// Thirds
+    ///
     .#{$namespace}one-third         { width:33.333%; }
     .#{$namespace}two-thirds        { width:66.666%; }
 
 
-    /**
-    * Quarters
-    */
+    ///
+    /// Quarters
+    ///
     .#{$namespace}one-quarter       { width:25%; }
     .#{$namespace}two-quarters      { @extend .#{$namespace}one-half; }
     .#{$namespace}three-quarters    { width:75%; }
 
 
-    /**
-    * Fifths
-    */
+    ///
+    /// Fifths
+    ///
     .#{$namespace}one-fifth         { width:20%; }
     .#{$namespace}two-fifths        { width:40%; }
     .#{$namespace}three-fifths      { width:60%; }
     .#{$namespace}four-fifths       { width:80%; }
 
 
-    /**
-    * Sixths
-    */
+    ///
+    /// Sixths
+    ///
     .#{$namespace}one-sixth         { width:16.666%; }
     .#{$namespace}two-sixths        { @extend .#{$namespace}one-third; }
     .#{$namespace}three-sixths      { @extend .#{$namespace}one-half; }
@@ -57,9 +57,9 @@
     .#{$namespace}five-sixths       { width:83.333%; }
 
 
-    /**
-    * Eighths
-    */
+    ///
+    /// Eighths
+    ///
     .#{$namespace}one-eighth        { width:12.5%; }
     .#{$namespace}two-eighths       { @extend .#{$namespace}one-quarter; }
     .#{$namespace}three-eighths     { width:37.5%; }
@@ -69,9 +69,9 @@
     .#{$namespace}seven-eighths     { width:87.5%; }
 
 
-    /**
-    * Tenths
-    */
+    ///
+    /// Tenths
+    ///
     .#{$namespace}one-tenth         { width:10%; }
     .#{$namespace}two-tenths        { @extend .#{$namespace}one-fifth; }
     .#{$namespace}three-tenths      { width:30%; }
@@ -83,9 +83,9 @@
     .#{$namespace}nine-tenths       { width:90%; }
 
 
-    /**
-    * Twelfths
-    */
+    ///
+    /// Twelfths
+    ///
     .#{$namespace}one-twelfth       { width:8.333%; }
     .#{$namespace}two-twelfths      { @extend .#{$namespace}one-sixth; }
     .#{$namespace}three-twelfths    { @extend .#{$namespace}one-quarter; }
@@ -99,12 +99,15 @@
     .#{$namespace}eleven-twelfths   { width:91.666%; }
 }
 
+///
+/// Create namespaceless grid classes.
+///
 @include device-type;
 
 
-/**
- * Our responsive classes.
- */
+///
+/// Our responsive classes.
+///
 
 @each $breakpoint in $breakpoints {
     @include media-query(nth($breakpoint, 1)) {
