--- a/grid/_media-query.scss
+++ b/grid/_media-query.scss
@@ -1,28 +1,28 @@
 ///
-/// Media query mixin.
+/// @name Media query mixin.
+/// @group grid
+/// @description
+///     It's not great practice to define solid breakpoints up-front, preferring to
+///     modify your design when it needs it, rather than assuming you'll want a
+///     change at 'mobile'. However, as inuit.css is required to take a hands off
+///     approach to design decisions, this is the closest we can get to baked-in
+///     responsiveness. It's flexible enough to allow you to set your own breakpoints
+///     but solid enough to be frameworkified.
 ///
-/// It’s not great practice to define solid breakpoints up-front, preferring to
-/// modify your design when it needs it, rather than assuming you’ll want a
-/// change at ‘mobile’. However, as inuit.css is required to take a hands off
-/// approach to design decisions, this is the closest we can get to baked-in
-/// responsiveness. It’s flexible enough to allow you to set your own breakpoints
-/// but solid enough to be frameworkified.
+///     We define some broad breakpoints in our variables/_breakpoints.scss file that
+///     are picked up here for use in a simple media query mixin. Our options are:
 ///
-/// We define some broad breakpoints in our vars file that are picked up here
-/// for use in a simple media query mixin. Our options are:
+///         palm
+///         lap
+///         lap-and-up
+///         portable
+///         desk
+///         desk-wide
 ///
-/// palm
-/// lap
-/// lap-and-up
-/// portable
-/// desk
-/// desk-wide
+///     Not using a media query will, naturally, serve styles to all devices.
 ///
-/// Not using a media query will, naturally, serve styles to all devices.
-///
-/// `@include media-query(palm){ [styles here] }`
-///
-/// We work out your end points for you:
+/// @example
+///     @include media-query(palm){ [styles here] }
 ///
 
 @mixin media-query($media-query) {
@@ -42,6 +42,6 @@
     }
 
     @if not($breakpoint-found) {
-        @warn "Breakpoint ‘#{$media-query}’ does not exist";
+        @warn "Breakpoint '#{$media-query}' does not exist";
     }
 }
