--- a/grid/_modifiers.scss
+++ b/grid/_modifiers.scss
@@ -1,158 +1,155 @@
-
 ///
-/// Fluid and nestable grid system. It is necessary to comment out, or otherwise
-/// remove, the whitespace from between grid items, e.g.:
+/// @name Grid modifiers
+/// @group grid
+/// @description
+///     Fluid and nestable grid system. It is necessary to comment out, or otherwise
+///     remove, the whitespace from between grid items.
 ///
-   // <div class="grid">
-
-   //     <div class="grid__item  one-third">
-   //         <p>One third grid</p>
-   //     </div><!--
-
-   //  --><div class="grid__item  two-thirds">
-   //         <p>Two thirds grid</p>
-   //     </div><!--
-
-   //  --><div class="grid__item  one-half">
-   //         <p>One half grid</p>
-   //     </div><!--
-
-   //  --><div class="grid__item  one-quarter">
-   //         <p>One quarter grid</p>
-   //     </div><!--
-
-   //  --><div class="grid__item  one-quarter">
-   //         <p>One quarter grid</p>
-   //     </div>
-
-   // </div>
+/// @example
+///     <div class="grid">
+///         <div class="grid__item one-third">
+///             <p>One third grid</p>
+///         </div><!--
 ///
-/// Demo: jsfiddle.net/inuitcss/CLYUC
+///      --><div class="grid__item two-thirds">
+///             <p>Two thirds grid</p>
+///         </div><!--
 ///
+///      --><div class="grid__item one-half">
+///             <p>One half grid</p>
+///         </div><!--
+///
+///      --><div class="grid__item  one-quarter">
+///             <p>One quarter grid</p>
+///          </div><!--
+///
+///      --><div class="grid__item  one-quarter">
+///             <p>One quarter grid</p>
+///         </div>
+///     </div>
 ///
 
 
 ///
 /// Grid wrapper
 ///
-.grid{
-    list-style:none;
-    margin:0;
-    padding:0;
-    margin-left:-$base-spacing-unit;
+.grid {
+    margin: 0;
+    margin-left: -$base-spacing-unit;
+    padding: 0;
+    list-style: none;
 }
 
-///
-/// Very infrequently occuring grid wrappers as children of grid wrappers.
-///
-    .grid > .grid{
-        margin-left:0;
+    ///
+    /// Very infrequently occuring grid wrappers as children of grid wrappers.
+    ///
+    .grid > .grid {
+        margin-left: 0;
     }
 
-///
-/// Grid
-///
-    .grid__item{
-        display:inline-block;
-        padding-left:$base-spacing-unit;
-        vertical-align:top;
-        width:100%;
-        box-sizing:border-box;
+    ///
+    /// Grid item
+    ///
+    .grid__item {
+        display: inline-block;
+        width: 100%;
+        padding-left: $base-spacing-unit;
+        vertical-align: top;
+        box-sizing: border-box;
     }
 
 
 ///
 /// Reversed grids allow you to structure your source in the opposite order to
-/// how your rendered layout will appear. Extends `.grid`.
+/// how your rendered layout will appear. Extends '.grid'.
 ///
-.grid--rev{
-    direction:rtl;
-    text-align:left;
+.grid--rev {
+    direction: rtl;
+    text-align: left;
 
-    > .grid__item{
-        direction:ltr;
-        text-align:left;
+    > .grid__item {
+        direction: ltr;
+        text-align: left;
     }
 }
 
 
 ///
 /// Gutterless grids have all the properties of regular grids, minus any spacing.
-/// Extends `.grid`.
+/// Extends '.grid'.
 ///
-.grid--full{
-    margin-left:0;
+.grid--full {
+    margin-left: 0;
 
-    > .grid__item{
-        padding-left:0;
+    > .grid__item {
+        padding-left: 0;
     }
 }
 
 
 ///
-/// Align the entire grid to the right. Extends `.grid`.
+/// Align the entire grid to the right. Extends '.grid'.
 ///
-.grid--right{
-    text-align:right;
+.grid--right {
+    text-align: right;
 
-    > .grid__item{
-        text-align:left;
+    > .grid__item {
+        text-align: left;
     }
 }
 
 
 ///
 /// Centered grids align grid items centrally without needing to use push or pull
-/// classes. Extends `.grid`.
+/// classes. Extends '.grid'.
 ///
-.grid--center{
-    text-align:center;
+.grid--center {
+    text-align: center;
 
-    > .grid__item{
-        text-align:left;
+    > .grid__item {
+        text-align: left;
     }
 }
 
 
 ///
-/// Align grid cells vertically (`.grid--middle` or `.grid--bottom`). Extends
-/// `.grid`.
+/// Align grid cells vertically ('.grid--middle' or '.grid--bottom'). Extends
+/// '.grid'.
 ///
-.grid--middle{
+.grid--middle {
 
-    > .grid__item{
+    > .grid__item {
         vertical-align:middle;
     }
 }
 
-.grid--bottom{
+.grid--bottom {
 
-    > .grid__item{
+    > .grid__item {
         vertical-align:bottom;
     }
 }
 
 
 ///
-/// Create grids with narrower gutters. Extends `.grid`.
+/// Create grids with narrower gutters. Extends '.grid'.
 ///
-.grid--narrow{
-    margin-left:-($base-spacing-unit / 2);
+.grid--narrow {
+    margin-left: -$half-spacing-unit;
 
     > .grid__item{
-        padding-left:$base-spacing-unit / 2;
+        padding-left: $half-spacing-unit;
     }
 }
 
 
 ///
-/// Create grids with wider gutters. Extends `.grid`.
+/// Create grids with wider gutters. Extends '.grid'.
 ///
-
-.grid--wide{
-    margin-left:-($base-spacing-unit * 2);
+.grid--wide {
+    margin-left: -($base-spacing-unit * 2);
 
     > .grid__item{
-        padding-left:$base-spacing-unit * 2;
+        padding-left: $base-spacing-unit * 2;
     }
 }
