--- a/helpers/_columns.scss
+++ b/helpers/_columns.scss
@@ -1,17 +1,17 @@
-/*------------------------------------*\
-    $COLUMNS
-\*------------------------------------*/
-/**
- * Here we can set elements in columns of text using CSS3, e.g.:
- *
-   <p class=text-cols--2>
- *
- * Demo: jsfiddle.net/inuitcss/E26Yd
- *
- */
+///
+/// @name Columns
+/// @group helpers
+/// @description
+///     Here we can set elements in columns of text using CSS3
+///
+/// @example
+///     <p class="text-cols--2"></p>
+///
+
 %text-cols{
     column-gap: base-spacing-unit;
 }
+
 .text-cols--2    { @extend %text-cols; column-count: 2; }
 .text-cols--3    { @extend %text-cols; column-count: 3; }
 .text-cols--4    { @extend %text-cols; column-count: 4; }
