--- a/helpers/_headings.scss
+++ b/helpers/_headings.scss
@@ -1,14 +1,15 @@
 ///
-/// Style any number of headings in one fell swoop, e.g.:
+/// @name Headings
+/// @group helpers
+/// @description
+///     Style any number of headings in one fell swoop.
 ///
-// .foo{
-//     @include headings(1, 3){
-//         color:#BADA55;
-//     }
-//  }
-///
-/// With thanks to lar_zzz, paranoida, rowanmanning and ultimately
-/// thierrylemoulec for refining and improving my initial mixin.
+/// @example
+///     .foo{
+//          @include headings(1, 3){
+//              color: #BADA55;
+//          }
+//      }
 ///
 
 @mixin headings($from: 1, $to: 6){
