--- a/setup/_forms.scss
+++ b/setup/_forms.scss
@@ -1,29 +1,29 @@
 fieldset {
-  background-color: $secondary-background-color;
-  border: $base-border;
-  margin: 0 0 $half-spacing-unit;
-  padding: $base-spacing-unit;
+    background-color: $secondary-background-color;
+    border: $base-border;
+    margin: 0 0 $half-spacing-unit;
+    padding: $base-spacing-unit;
 }
 
 input,
 label,
 select {
-  display: block;
-  font-family: $base-font-family;
-  font-size: $base-font-size;
+    display: block;
+    font-family: $base-font-family;
+    font-size: $base-font-size;
 }
 
 label {
-  font-weight: 600;
-  margin-bottom: $half-spacing-unit / 2;
+    font-weight: 600;
+    margin-bottom: $half-spacing-unit / 2;
 
-  &.required::after {
-    content: "*";
-  }
+    &.required::after {
+        content: "*";
+    }
 
-  abbr {
-    display: none;
-  }
+    abbr {
+        display: none;
+    }
 }
 
 input[type="color"],
@@ -42,67 +42,67 @@ input[type="url"],
 input[type="week"],
 textarea,
 select[multiple=multiple] {
-  background-color: $base-background-color;
-  border: $base-border;
-  border-radius: $base-border-radius;
-  box-shadow: inset 0 1px 3px rgba(#000, 0.06);
-  box-sizing: border-box;
-  font-family: $base-font-family;
-  font-size: $base-font-size;
-  margin-bottom: $half-spacing-unit;
-  padding: $base-spacing-unit / 3;
-  transition: border-color 150ms ease;
-  width: 100%;
-
-  &:hover {
-    border-color: darken($base-border-color, 20%);
-  }
-
-  &:focus {
-    border-color: $action-color;
-    box-shadow: inset 0 1px 3px rgba(#000, 0.06), 0 0 5px lighten($action-color, 20%);
-    outline: none;
-  }
-
-  &:disabled {
-    background-color: shade($base-background-color, 5%);
-    cursor: not-allowed;
+    background-color: $base-background-color;
+    border: $base-border;
+    border-radius: $base-border-radius;
+    box-shadow: inset 0 1px 3px rgba(#000, 0.06);
+    box-sizing: border-box;
+    font-family: $base-font-family;
+    font-size: $base-font-size;
+    margin-bottom: $half-spacing-unit;
+    padding: $base-spacing-unit / 3;
+    transition: border-color 150ms ease;
+    width: 100%;
 
     &:hover {
-      border: $base-border;
+        border-color: darken($base-border-color, 20%);
     }
-  }
+
+    &:focus {
+        border-color: $action-color;
+        box-shadow: inset 0 1px 3px rgba(#000, 0.06), 0 0 5px lighten($action-color, 20%);
+        outline: none;
+    }
+
+    &:disabled {
+        background-color: lighten($base-border-color, 5%);
+        cursor: not-allowed;
+
+        &:hover {
+            border: $base-border;
+        }
+    }
 }
 
 textarea {
-  resize: vertical;
+    resize: vertical;
 }
 
 input[type="search"] {
-  appearance: none;
+    appearance: none;
 }
 
 input[type="checkbox"],
 input[type="radio"] {
-  display: inline;
-  margin-right: $half-spacing-unit / 2;
+    display: inline;
+    margin-right: $half-spacing-unit / 2;
 
-  + label {
-    display: inline-block;
-  }
+    + label {
+        display: inline-block;
+    }
 }
 
 input[type="file"] {
-  margin-bottom: $half-spacing-unit;
-  width: 100%;
+    width: 100%;
+    margin-bottom: $half-spacing-unit;
 
-  &:focus {
-    outline: none;
-  }
+    &:focus {
+        outline: none;
+    }
 }
 
 select {
-  margin-bottom: $base-spacing-unit;
-  max-width: 100%;
-  width: auto;
+    width: auto;
+    max-width: 100%;
+    margin-bottom: $base-spacing-unit;
 }
