--- a/base/_typography.scss
+++ b/base/_typography.scss
@@ -6,12 +6,7 @@ body {
     line-height: $base-line-height;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+@include headings(1, 6) {
     font-family: $heading-font-family;
     font-size: $base-font-size;
     line-height: $heading-line-height;
