--- a/settings/_responsive.scss
+++ b/settings/_responsive.scss
@@ -1,7 +1,10 @@
 ///
-/// Define your breakpoints. The first value is the prefix that shall be used for
-/// your classes (e.g. `.palm--one-half`), the second value is the media query
-/// that the breakpoint fires at.
+/// @name Responsive
+/// @group settings
+/// @description
+///     Define your breakpoints. The first value is the prefix that shall be used for
+///     your classes (e.g. `.palm--one-half`), the second value is the media query
+///     that the breakpoint fires at.
 ///
 $breakpoints: (
     "palm" "(max-width: 480px)",
