--- a/settings/_colours.scss
+++ b/settings/_colours.scss
@@ -1,11 +1,87 @@
-///
-/// @name Colours
+////
+/// settings/_colours.scss
 /// @group settings
-/// @description
-///     A handfull of default colours used to decorate our base
-///     components and objects.
+////
+
 ///
-$blue: #477dca !default;
-$dark-grey: #333 !default;
-$medium-grey: #999 !default;
-$light-grey: #ddd !default;
+/// An initialisation of the array where application specific colours should be declared. Can be used
+/// also to override default colours declared in $palettes-default.
+///
+/// @name palettes
+/// @type Map
+/// @prop {Map} pallette - A named colour palette to house different tones of said palette
+/// @prop {String} pallette.tone [Colour] - A key-value pair to describe the tone of the parent palette
+///       and supply the valid colour value.
+/// @example
+///     $palettes: (
+///         grey: (
+///             base: #999,
+///             light: lighten(#999, 25%),
+///             dark: darken(#999, 25%)
+///         ),
+///         red: (
+///             base: #F00
+///         ),
+///     );
+///
+$palettes: () !default;
+
+///
+/// A handfull of default colours used to decorate our base components and objects.
+/// @name   palettes-default
+/// @access private
+/// @see    palettes
+///
+$palettes-default: (
+    grey: (
+        base: #999,
+        light: lighten(#999, 20%),
+        dark: darken(#999, 20%)
+    ),
+    blue: (
+        base: #477dca
+    ),
+);
+
+
+
+///
+/// A variable to house the merged arrays of $palettes and $palettes-default.
+/// Why two arrays you ask? It allows the default colours provided by finesse to be *optionally*
+/// overwritten. Using one array would result in having to respecify the defaults if any new
+/// colours were to be added for the application.
+/// @name       palettes-merged
+/// @access     private
+/// @require    {variable} palettes-default
+/// @require    {variable} palettes
+///
+$palettes-merged: map-merge($palettes-default, $palettes);
+
+///
+/// The function used to fetch valid colour values from the $palletes and $palettes-default data maps. Function
+/// location is currently in `settings/_colours.scss` as other settings files require this function, it throws
+/// a error due to late declaration.
+///
+/// @name       palette
+/// @group      tools
+/// @param      {string} $palette - A reference to an available palette (colour) in $palletes or $palettes-default.
+/// @param      {string} $tone [base] - A reference to an available tone within a selected palette.
+/// @require    {variable} palettes-merged
+/// @return     {string} colour value (HEX, RGB)
+///
+/// @example
+///     color: palette(grey, light);
+///     color: palette(blue);
+///
+@function palette($palette, $tone: 'base') {
+    @if map-has-key($palettes-merged, $palette) {
+        @if map-has-key(map-get($palettes-merged, $palette), $tone) {
+            @return map-get(map-get($palettes-merged, $palette), $tone);
+        } @else {
+            @warn "Palette '#{$palette}' does not contain '#{$tone}' to";
+        }
+
+    } @else {
+        @warn "Palette '#{$palette}' does not exist";
+    }
+}
