Updated breakpoint data maps to be inline with latest SASS releases and simplified responsive helper functions

--- a/_finesse.scss
+++ b/_finesse.scss
@@ -28,7 +28,7 @@
 @import "tools/arrow";
 @import "tools/headings";
 @import "tools/responsive";
-@import "tools/widths";
+@import "tools/device-type";
 
 ///
 /// Generic
