--- a/settings/_responsive.scss
+++ b/settings/_responsive.scss
@@ -1,16 +1,26 @@
-///
-/// @name Responsive
+////
+/// settings/_responsive.scss
 /// @group settings
-/// @description
-///     Define your breakpoints. The first value is the prefix that shall be used for
-///     your classes (e.g. `.palm--one-half`), the second value is the media query
-///     that the breakpoint fires at.
+////
+
 ///
+/// Define your breakpoints. The first value is the prefix that shall be used for
+/// your classes (e.g. `.palm--one-half`), the second value is the media query
+/// that the breakpoint fires at. If one of these values is required to be overritten,
+/// the entire data map must be redeclared in the application. Any issue regarding media queries
+/// in your application maybe due to an incorrect declaration within your custom $breakpoints data map.
+///
+/// @name breakpoints
+/// @type Map
+/// @prop {String} breakpoint [Media Query] - A key-value pair to give a reference
+/// to a media query, and the media query itself.
+///
+
 $breakpoints: (
-    "palm" "(max-width: 480px)",
-    "lap" "(min-width: 481px) and (max-width: 1023px)",
-    "portable" "(max-width: 1023px)",
-    "lap-and-up" "(min-width: 481px)",
-    "desk" "(min-width: 1024px)",
-    "desk-wide" "(min-width: 1200px)"
+    palm: '(max-width: 480px)',
+    lap: '(min-width: 481px) and (max-width: 1023px)',
+    portable: '(max-width: 1023px)',
+    lap-and-up: '(min-width: 481px)',
+    desk: '(min-width: 1024px)',
+    desk-wide: '(min-width: 1200px)'
 ) !default;
