--- a/settings/_colours.scss
+++ b/settings/_colours.scss
@@ -35,8 +35,8 @@ $palettes: () !default;
 $palettes-default: (
     grey: (
         base: #999,
-        light: lighten(#999, 20%),
-        dark: darken(#999, 20%)
+        light: #EEE,
+        dark: #333
     ),
     blue: (
         base: #477dca
