added modal component, tweaked header js

--- a/_finesse.scss
+++ b/_finesse.scss
@@ -78,6 +78,7 @@
 @import "components/stats";
 @import "components/header";
 @import "components/footer";
+@import "components/modal";
 
 ///
 /// Trumps
