--- a/components/_header.scss
+++ b/components/_header.scss
@@ -6,14 +6,15 @@
     .header__overlay {
         opacity: 0;
         position: fixed;
-        // z-index: -1;
+        z-index: -1;
         transition: opacity 0.4s ease 0s;
         width: 100%;
         min-height: 100%;
         background-color: rgba(#000, 0.5);
 
         .mobile-nav-active & {
-            opacity: 0;
+            opacity: 1;
+            z-index: 1;
         }
     }
 
