--- a/settings/_colours.scss
+++ b/settings/_colours.scss
@@ -62,7 +62,7 @@ $palettes-merged: map-merge($palettes-default, $palettes);
 /// location is currently in `settings/_colours.scss` as other settings files require this function, it throws
 /// a error due to late declaration.
 ///
-/// @name       palette
+/// @name       getColour
 /// @group      tools
 /// @param      {string} $palette - A reference to an available palette (colour) in $palletes or $palettes-default.
 /// @param      {string} $tone [base] - A reference to an available tone within a selected palette.
@@ -70,10 +70,10 @@ $palettes-merged: map-merge($palettes-default, $palettes);
 /// @return     {string} colour value (HEX, RGB)
 ///
 /// @example
-///     color: palette(grey, light);
-///     color: palette(blue);
+///     color: getColour(grey, light);
+///     color: getColour(blue);
 ///
-@function palette($palette, $tone: 'base') {
+@function getColour($palette, $tone: 'base') {
     @if map-has-key($palettes-merged, $palette) {
         @if map-has-key(map-get($palettes-merged, $palette), $tone) {
             @return map-get(map-get($palettes-merged, $palette), $tone);
@@ -84,4 +84,15 @@ $palettes-merged: map-merge($palettes-default, $palettes);
     } @else {
         @warn "Palette '#{$palette}' does not exist";
     }
+}
+
+///
+/// An alias of getColour with the american spelling because we all make mistakes...
+///
+/// @name       getColor
+/// @group      tools
+/// @see        getColour
+///
+@function getColor($palette, $tone: 'base') {
+    @return getColour($palette, $tone);
 }
