Small amount of documentation for base files

--- a/base/_buttons.scss
+++ b/base/_buttons.scss
@@ -1,3 +1,9 @@
+///
+/// This gives you an opinionated button style on the tags themselves
+/// (controversial I know!) which is more likely to be closer to your design
+/// than the 'out of the box' grey horribleness.
+///
+
 button,
 input[type="submit"],
 input[type="reset"] {
