--- a/base/_lists.scss
+++ b/base/_lists.scss
@@ -1,3 +1,8 @@
+///
+/// Not much to see here, just a nice starting point for lists using our
+/// site-wide spacing values.
+///
+
 ul,
 ol {
     list-style-type: none;
