--- a/base/_typography.scss
+++ b/base/_typography.scss
@@ -1,3 +1,10 @@
+///
+/// Base font styles that are a little prettier that what normalize.css gives.
+/// You would have had to override these styles anyway so why not have a crack
+/// at giving you what you need here. Any new design patterns we see in terms of
+/// typography should be reflected here.
+///
+
 body {
     background: #fff;
     color: $base-font-color;
