--- a/tools/_device-type.scss
+++ b/tools/_device-type.scss
@@ -1,6 +1,6 @@
 ///
 /// @name Widths
-/// @group grid
+/// @group tools
 /// @description
 ///     Sizes in human readable format. These are used in conjunction with other
 ///     objects and abstractions found in inuit.css, most commonly the grid system
