--- a/tools/_headings.scss
+++ b/tools/_headings.scss
@@ -1,6 +1,6 @@
 ///
 /// @name Headings
-/// @group helpers
+/// @group tools
 /// @description
 ///     Style any number of headings in one fell swoop.
 ///
