--- a/tools/_responsive.scss
+++ b/tools/_responsive.scss
@@ -1,6 +1,6 @@
 ///
 /// @name Media query mixin.
-/// @group grid
+/// @group tools
 /// @description
 ///     It's not great practice to define solid breakpoints up-front, preferring to
 ///     modify your design when it needs it, rather than assuming you'll want a
