--- a/components/_card.scss
+++ b/components/_card.scss
@@ -1,3 +1,24 @@
+///
+/// @name Card
+/// @group components
+/// @description
+///     Very simple card component. Any consistently used modifiers
+///     should be added here.
+///
+/// @example
+///     <div class="card">
+///         <div class="card__image">
+///             <img src="https://placehold.it/500x300" alt="">
+///         </div>
+///         <div class="card__body">
+///             <h3 class="card__title">Card title</h3>
+///             <p>Card content goes here.</p>
+///             <button>Button</button>
+///            </div>
+///        </div>
+///     </div>
+///
+
 .card {
     margin-bottom: $base-spacing-unit;
     border: $base-border;
