--- a/_finesse.scss
+++ b/_finesse.scss
@@ -30,6 +30,7 @@
 @import "tools/responsive";
 @import "tools/device-type";
 @import "tools/buttons";
+@import "tools/colour-it";
 
 ///
 /// Generic
