--- a/components/_lozenge.scss
+++ b/components/_lozenge.scss
@@ -12,21 +12,27 @@
  *
  */
 
-$line-height-ratio: $base-line-height / $base-font-size;
+///
+/// @name Lozenge
+/// @group component
+/// @description
+///     Creates a small tag like element for showing state/context. Modifier
+///     classes for each colour in the application are automatically created
+///     however by default the text colour will be white.
+///
+/// @example
+///     <p>This <span class="loz">here</span> is a lozenge!</p>
+///
 
-.loz{
+
+.loz {
     display:inline-block;
-    /**
-     * These numbers set in ems mean that, at its narrowest, a lozenge will be
-     * the same width as the `line-height` set on the `html` element.
-     * This allows us to use the `.loz` in almost any `font-size` we wish.
-     */
-    min-width:    ($line-height-ratio * 0.666667) * 1em;
-    padding-right:($line-height-ratio * 0.166667) * 1em;
-    padding-left: ($line-height-ratio * 0.166667) * 1em;
-              /* =1.50em */
+    padding: 0 0.5em;
     text-align: center;
-    background-color: $action-color;
+    background-color: $base-font-color;
     color: #fff;
     border-radius: $base-border-radius;
+
+    @include colour-it;
 }
+
