--- a/settings/_defaults.scss
+++ b/settings/_defaults.scss
@@ -10,7 +10,7 @@
 ///
 /// Default typography styles
 ///
-$base-font-size: 1em !default;
+$base-font-size: 16px !default;
 $base-font-family: Helvetica, sans-serif !default;
 $base-line-height: 1.5 !default;
 
