--- a/_finesse.scss
+++ b/_finesse.scss
@@ -1,4 +1,4 @@
-///
+////
 /// Finesse
 ///
 /// Finesse is a CSS toolkit employed by Evolution 7 which utilises core parts
@@ -11,7 +11,7 @@
 ///
 /// Also to Bourbon.io (http://bourbon.io/) for a slightly modified version of
 /// their Bitters scaffold styles (http://bitters.bourbon.io/).
-///
+////
 
 ///
 /// Settings
