--- a/objects/_buttons.scss
+++ b/objects/_buttons.scss
@@ -14,6 +14,11 @@
 ///     <button class"btn--blue btn--hollow">Button text</button>
 ///
 
+/// Creating default modifers using $action-color
+.btn {
+    @include buttons($action-color);
+}
+
 @each $palette, $tones in $palettes-merged {
     @each $key, $value in $tones {
         @if $key == 'base' {
@@ -26,13 +31,4 @@
             @include buttons($value);
         }
     }
-}
-
-.btn--large {
-    font-size: $base-font-size * 1.5;
-}
-
-.btn--full {
-    display: block;
-    width: 100%;
 }
