--- a/tools/_buttons.scss
+++ b/tools/_buttons.scss
@@ -3,7 +3,8 @@
 /// @group grid
 /// @description
 ///     Creates modified versions of the button object classes using the applications colour palette.
-///     We only need to modify the button modifiers that actually use the colours.
+///     We only really need to modify the button modifiers that actually use the colours but putting them
+///     all here to avoid confusion.
 ///
 /// @example
 ///     <button class"btn--blue btn--hollow">Button text</button>
@@ -17,6 +18,15 @@
         &:focus {
             background-color: darken($colour, 10%);
         }
+    }
+
+    &.btn--large {
+        font-size: $base-font-size * 1.5;
+    }
+
+    &.btn--full {
+        display: block;
+        width: 100%;
     }
 
     &.btn--hollow {
